Big Idea Proposal hochgeladen

--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "---\n",
     "\n",
-    "Group name:\n",
+    "Group name: Group B\n",
     "\n",
     "---\n"
    ]
@@ -31,6 +31,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Subject Matter:\n",
+    "\n",
+    "\n",
+    "### Motivation:\n",
+    "\n",
+    "\n",
+    "### General Question:\n",
+    "\n",
+    "\n",
+    "### Hypotheses:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Data description\n",
     "\n",
@@ -38,6 +55,16 @@
     "\n",
     "-   description of the observations in the data set,\n",
     "-   description of how the data was originally collected (not how you found the data but how the original curator of the data collected it)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "\n",
+    "\n",
+    "### How the data was collected:"
    ]
   },
   {
@@ -82,18 +109,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.13 ('dst')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "463226f144cc21b006ce6927bfc93dd00694e52c8bc6857abb6e555b983749e9"
+    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
    }
   }
  },
