--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -33,15 +33,29 @@
    "source": [
     "### Subject Matter:\n",
     "\n",
+    "In the city of Chicago, many crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open a new crime prevention centre. Now the city is asking our team which crimes occur particularly frequently and where they happen. With this information, the **Crime Prevention Center** can be built in a particularly well-situated location. In addition, the specialised departments of the centre can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime.\n",
+    "\n",
     "\n",
     "### Motivation:\n",
+    "\n",
+    "Various studies show that it is possible to prevent crime in cities with the help of specific actions. With the new **Crime Prevention Center**, we want to take a new approach in Chicago to prevent crime from the very beginning.\n",
+    "\n",
+    "* Crime Prevention and the Safer Cities Story\n",
+    "https://onlinelibrary.wiley.com/doi/10.1111/j.1468-2311.1993.tb00758.x\n",
+    "\n",
+    "* Social Crime Prevention in South Africa's Major Cities \n",
+    "http://csvr.org.za/docs/urbansafety/socialcrimeprevention.pdf\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### General Question:\n",
     "\n",
+    "Which kind of crimes happen particularly frequently and where do they happen?\n",
     "\n",
     "### Hypotheses:\n",
-    "\n"
+    "\n",
+    "There are places (districts/blocks) in Chicago where the most (dangerous) crimes happen."
    ]
   },
   {
@@ -64,7 +78,16 @@
     "### Observations:\n",
     "\n",
     "\n",
-    "### How the data was collected:"
+    "### How the data was collected:\n",
+    "\n",
+    "**Note:** As the original dataset was too large, we have reduced it a little, so it only contains criminal cases from 2018 and 2019.\n",
+    "\n",
+    "Crimes - 2001 to Present\n",
+    "\n",
+    "This dataset reflects reported incidents of crime (with the exception of murders where data exists for each victim) that occurred in the City of Chicago from 2001 to present, minus the most recent seven days. Data is extracted from the Chicago Police Department's CLEAR (Citizen Law Enforcement Analysis and Reporting) system. In order to protect the privacy of crime victims, addresses are shown at the block level only and specific locations are not identified. Should you have questions about this dataset, you may contact the Data Fulfillment and Analysis Division of the Chicago Police Department at DFA@ChicagoPolice.org.\n",
+    "\n",
+    "Disclaimer: These crimes may be based upon preliminary information supplied to the Police Department by the reporting parties that have not been verified. The preliminary crime classifications may be changed at a later date based upon additional investigation and there is always the possibility of mechanical or human error. Therefore, the Chicago Police Department does not guarantee (either expressed or implied) the accuracy, completeness, timeliness, or correct sequencing of the information and the information should not be used for comparison purposes over time. The Chicago Police Department will not be responsible for any error or omission, or for the use of, or the results obtained from the use of this information. All data visualizations on maps should be considered approximate and attempts to derive specific addresses are strictly prohibited. The Chicago Police Department is not responsible for the content of any off-site pages that are referenced by or that reference this web page other than an official City of Chicago or Chicago Police Department web page. The user specifically acknowledges that the Chicago Police Department is not responsible for any defamatory, offensive, misleading, or illegal conduct of other users, links, or third parties and that the risk of injury from the foregoing rests entirely with the user. The unauthorized use of the words \"Chicago Police Department,\" \"Chicago Police,\" or any colorable imitation of these words or the unauthorized use of the Chicago Police Department logo is unlawful. This web page does not, in any way, authorize such use. Data are updated daily. To access a list of Chicago Police Department - Illinois Uniform Crime Reporting (IUCR) codes, go to http://data.cityofchicago.org/Public-Safety/Chicago-Police-Department-Illinois-Uniform-Crime-R/c7ck-438e\n",
+    "\n"
    ]
   },
   {
@@ -77,7 +100,7 @@
     "\n",
     "-   Description of the relevant variable.\n",
     "-   Exploratory data analysis and summary statistics for the relevant variables.\n",
-    "-   The visualization types (what kind of visualizations you will you use)"
+    "-   The visualization types (what kind of visualizations will you use)"
    ]
   },
   {
