--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "### Subject Matter:\n",
     "\n",
-    "In the city of Chicago, many crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open a new crime prevention centre. Now the city is asking our team which crimes occur particularly frequently and where they happen. With this information, the **Crime Prevention Center** can be built in a particularly well-situated location. In addition, the specialised departments of the centre can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime.\n",
+    "In the city of Chicago, many incidents/crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open a new crime prevention centre. Now the city is asking our team which crimes occur particularly frequently and where they happen. With this information, the **Crime Prevention Center** can be built in a particularly well-situated location. In addition, the specialised departments of the centre can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime.\n",
     "\n",
     "\n",
     "### Motivation:\n",
@@ -55,7 +55,7 @@
     "\n",
     "### Hypotheses:\n",
     "\n",
-    "There are places (districts/blocks) in Chicago where the most (dangerous) crimes happen."
+    "There are places (districts/blocks) in Chicago where the most (dangerous) crimes/incidents happen."
    ]
   },
   {
@@ -77,6 +77,41 @@
    "source": [
     "### Observations:\n",
     "\n",
+    "* **ID** Unique identifier for the record.\t\n",
+    "\n",
+    "* **Case Number** The Chicago Police Department RD Number (Records Division Number), which is unique to the incident. \t\n",
+    "\n",
+    "* **Date** Date when the incident occurred. This is sometimes a best estimate. \n",
+    "\n",
+    "* **Block**\tThe partially redacted address where the incident occurred, placing it on the same block as the actual address.\n",
+    "\n",
+    "* **IUCR** The Illinois Unifrom Crime Reporting code. This is directly linked to the Primary Type and Description. See the list of IUCR codes at https://data.cityofchicago.org/d/c7ck-438e.\n",
+    "\n",
+    "* **Primary Type** The primary description of the IUCR code.\n",
+    "\n",
+    "* **Type** The primary description of the IUCR code.\t\n",
+    "\n",
+    "* **Description** The secondary description of the IUCR code, a subcategory of the primary description.\t\n",
+    "\n",
+    "* **Location Description** Description of the location where the incident occurred. \n",
+    "\n",
+    "* **Arrest** Indicates whether an arrest was made.\t\n",
+    "\n",
+    "* **Domestic** Indicates whether the incident was domestic-related as defined by the Illinois Domestic Violence Act.\t\n",
+    "\n",
+    "* **Beat** \tIndicates the beat where the incident occurred. A beat is the smallest police geographic area – each beat has a dedicated police beat car. Three to five beats make up a police sector, and three sectors make up a police district. The Chicago Police Department has 22 police districts. See the beats at https://data.cityofchicago.org/d/aerh-rz74. \t\n",
+    "\n",
+    "* **District** Indicates the police district where the incident occurred. See the districts at https://data.cityofchicago.org/d/fthy-xz3r.\t\n",
+    "\n",
+    "* **Ward** The ward (City Council district) where the incident occurred. See the wards at https://data.cityofchicago.org/d/sp34-6z76.\t\n",
+    "\n",
+    "* **Community Area** Indicates the community area where the incident occurred. Chicago has 77 community areas. See the community areas at https://data.cityofchicago.org/d/cauq-8yn6. \n",
+    "\n",
+    "* **Year** Year the incident occurred.\t\n",
+    "\n",
+    "* **Latitude** The longitude of the location where the incident occurred. This location is shifted from the actual location for partial redaction but falls on the same block.\t\n",
+    "\n",
+    "* **Longitude** The longitude of the location where the incident occurred. This location is shifted from the actual location for partial redaction but falls on the same block.\n",
     "\n",
     "### How the data was collected:\n",
     "\n",
