primary_type und description update

--- a/notebooks/01-HP-data-preperation.ipynb
+++ b/notebooks/01-HP-data-preperation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "'/Users/hendrikpfeifer/DataStorytelling/project-dst/'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "[78394 rows x 17 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "4    23  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
        "4  False    False"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
        "[78394 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1473,17 +1473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#primary_type noch einmal gesondert ansehen\n",
-    "cat_list = [\"id\",\"block\",\"primary_type\", \"description\", \"location_description\", \"beat\", \"district\", \"ward\", \"community_area\", \"year\"]"
+    "#primary_type und descripton noch einmal gesondert ansehen\n",
+    "cat_list = [\"id\",\"block\",\"primary_type\", \"description\", \"location_description\", \"beat\", \"district\", \"ward\", \"community_area\", \"year\", \"month\", \"day\", \"hour\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1521,20 +1521,136 @@
       " 12  year                  78394 non-null  category      \n",
       " 13  latitude              78394 non-null  float64       \n",
       " 14  longitude             78394 non-null  float64       \n",
-      " 15  month                 78394 non-null  int64         \n",
-      " 16  day                   78394 non-null  int64         \n",
-      " 17  hour                  78394 non-null  int64         \n",
+      " 15  month                 78394 non-null  category      \n",
+      " 16  day                   78394 non-null  category      \n",
+      " 17  hour                  78394 non-null  category      \n",
       " 18  arrest__False         78394 non-null  category      \n",
       " 19  arrest__True          78394 non-null  category      \n",
       " 20  domestic__False       78394 non-null  category      \n",
       " 21  domestic__True        78394 non-null  category      \n",
-      "dtypes: category(16), datetime64[ns](1), float64(2), int64(3)\n",
-      "memory usage: 8.6 MB\n"
+      "dtypes: category(19), datetime64[ns](1), float64(2)\n",
+      "memory usage: 7.0 MB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SEX OFFENSE', 'THEFT', 'NARCOTICS', 'CRIMINAL DAMAGE', 'MOTOR VEHICLE THEFT', ..., 'OBSCENITY', 'NON-CRIMINAL', 'OTHER NARCOTIC VIOLATION', 'PUBLIC INDECENCY', 'NON-CRIMINAL (SUBJECT SPECIFIED)']\n",
+      "Length: 33\n",
+      "Categories (33, object): ['ARSON', 'ASSAULT', 'BATTERY', 'BURGLARY', ..., 'SEX OFFENSE', 'STALKING', 'THEFT', 'WEAPONS VIOLATION']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"primary_type\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THEFT                                18820\n",
+      "BATTERY                              14863\n",
+      "CRIMINAL DAMAGE                       8151\n",
+      "ASSAULT                               6141\n",
+      "DECEPTIVE PRACTICE                    5404\n",
+      "OTHER OFFENSE                         5136\n",
+      "NARCOTICS                             4170\n",
+      "BURGLARY                              3235\n",
+      "MOTOR VEHICLE THEFT                   2817\n",
+      "ROBBERY                               2626\n",
+      "CRIMINAL TRESPASS                     2025\n",
+      "WEAPONS VIOLATION                     1789\n",
+      "OFFENSE INVOLVING CHILDREN             649\n",
+      "PUBLIC PEACE VIOLATION                 473\n",
+      "INTERFERENCE WITH PUBLIC OFFICER       417\n",
+      "SEX OFFENSE                            351\n",
+      "CRIM SEXUAL ASSAULT                    337\n",
+      "PROSTITUTION                           214\n",
+      "HOMICIDE                               159\n",
+      "CRIMINAL SEXUAL ASSAULT                125\n",
+      "ARSON                                  108\n",
+      "LIQUOR LAW VIOLATION                    80\n",
+      "STALKING                                68\n",
+      "CONCEALED CARRY LICENSE VIOLATION       60\n",
+      "GAMBLING                                53\n",
+      "INTIMIDATION                            44\n",
+      "KIDNAPPING                              40\n",
+      "OBSCENITY                               20\n",
+      "PUBLIC INDECENCY                         7\n",
+      "NON-CRIMINAL                             6\n",
+      "HUMAN TRAFFICKING                        3\n",
+      "OTHER NARCOTIC VIOLATION                 2\n",
+      "NON-CRIMINAL (SUBJECT SPECIFIED)         1\n",
+      "Name: primary_type, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"primary_type\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CRIMINAL SEXUAL ABUSE', 'OVER $500', 'POSS: HEROIN(WHITE)', 'TO PROPERTY', '$500 AND UNDER', ..., 'MANU/DELIVER:HEROIN(BLACK TAR)', 'PROTECTED EMPLOYEE - HANDS, FISTS, FEET, NO /..., 'ARMED - OTHER DANGEROUS WEAPON', 'CYCLE, SCOOTER, BIKE WITH VIN', 'AGGRAVATED POLICE OFFICER - OTHER DANGEROUS W...]\n",
+      "Length: 329\n",
+      "Categories (329, object): ['$500 AND UNDER', 'ABUSE/NEGLECT: CARE FACILITY', 'AGG CRIM SEX ABUSE FAM MEMBER', 'AGG CRIMINAL SEXUAL ABUSE', ..., 'VIOLATION OF SUMMARY CLOSURE', 'VIOLENT OFFENDER: ANNUAL REGISTRATION', 'VIOLENT OFFENDER: DUTY TO REGISTER', 'VIOLENT OFFENDER: FAIL TO REGISTER NEW ADDRESS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"description\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SIMPLE                            9013\n",
+      "DOMESTIC BATTERY SIMPLE           7161\n",
+      "$500 AND UNDER                    7068\n",
+      "OVER $500                         4492\n",
+      "TO VEHICLE                        4050\n",
+      "                                  ... \n",
+      "DEFACE IDENT MARKS OF FIREARM        1\n",
+      "SEXUAL RELATIONS IN FAMILY           1\n",
+      "DELIVER CANNABIS TO PERSON <18       1\n",
+      "EDUCATIONAL INTIMIDAITON             1\n",
+      "INSURANCE FRAUD                      1\n",
+      "Name: description, Length: 329, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"description\"].value_counts())"
    ]
   },
   {
@@ -1546,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
