--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -139,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,9 +158,25 @@
     "\n",
     "| Name  |   Description\t   \t| Type   \t|  Format \t|\n",
     "|---\t|---\t          \t|---\t    |---\t|\n",
-    "|   \t|   \t            |   \t    |   \t|\n",
-    "|   \t|   \t       \t    |   \t    |   \t|\n",
-    "|   \t|   \t       \t    |   \t    |   \t|\n",
+    "|ID   \t|Unique identifier for the record.   \t            |numeric   \t    |category   \t|\n",
+    "|Case Number   \t|The Chicago Police Department RD Number (Records Division Number), which is unique to the incident.   \t       \t    |numeric   \t    |category   \t|\n",
+    "|Date   \t|Date when the incident occurred.   \t       \t    |oridnal   \t    |date   \t|\n",
+    "|Block   \t|The partially redacted address where the incident occurred.   \t            |numeric   \t    |category   \t|\n",
+    "|IUCR   \t|The Illinois Unifrom Crime Reporting code.   \t       \t    |numeric   \t    |category   \t|\n",
+    "|Primary Type   \t|The primary description of the IUCR code.   \t       \t    |nominal   \t    |category   \t|\n",
+    "|Type   \t|The primary description of the IUCR code.   \t            |nominal   \t    |category   \t|\n",
+    "|Description   \t|The secondary description of the IUCR code.   \t       \t    |nominal   \t    |category   \t|\n",
+    "|Location Description   \t|Description of the location where the incident occurred.   \t       \t    |nominal   \t    |category   \t|\n",
+    "|Arrest   \t|Indicates whether an arrest was made.   \t            |nominal   \t    |category   \t|\n",
+    "|Domestic   \t|Indicates whether the incident was domestic-related as defined by the Illinois Domestic Violence Act.   \t       \t    |nominal   \t    |category   \t|\n",
+    "|Beat   \t|Indicates the beat where the incident occurred.   \t       \t    |numeric, dicsrete   \t    |category   \t|\n",
+    "|District   \t|Indicates the police district where the incident occurred.   \t       \t    |numeric, dicsrete   \t    |category   \t|\n",
+    "|Ward   \t|The ward (City Council district) where the incident occurred.   \t       \t    |numeric, discrete   \t    |category   \t|\n",
+    "|Community Area   \t|Indicates the community area where the incident occurred.   \t       \t    |numeric, discrete   \t    |category   \t|\n",
+    "|Year   \t|Year the incident occurred.   \t       \t    |nominal   \t    |category   \t|\n",
+    "|Latitude   \t|The longitude of the location where the incident occurred.   \t       \t    |numeric   \t    |float   \t|\n",
+    "|Longitude   \t|The longitude of the location where the incident occurred.   \t       \t    |numeric   \t    |float   \t|\n",
+    "\n",
     "\n",
     "\n",
     "<br>\n",
