--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -139,11 +139,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "*Variables:*\n",
+    "\n",
+    "Information to figure out *when* the crime was commited:\n",
+    "- Date\n",
+    "- Year\n",
+    "\n",
+    "Information to figure out *where* the crime was commited:\n",
+    "- Location Description\n",
+    "- Domestic\n",
+    "- District\n",
+    "- Ward\n",
+    "- Community Area\n",
+    "- Latitude\n",
+    "- Longitude\n",
+    "\n",
+    "Information whether an arrest was made:\n",
+    "- Arrest\n",
+    "\n",
+    "*Data:*\n",
+    "\n",
+    "*Visualization types:*\n",
+    "- Choropleth Map: A map that will show where the most crimes are commited in Chicago. (https://altair-viz.github.io/gallery/choropleth.html)"
+   ]
   },
   {
    "cell_type": "markdown",
