--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -150,6 +150,7 @@
     "\n",
     "Information to figure out *where* the crime was commited:\n",
     "- Location Description\n",
+    "- Block\n",
     "- Domestic\n",
     "- District\n",
     "- Ward\n",
@@ -163,7 +164,8 @@
     "*Data:*\n",
     "\n",
     "*Visualization types:*\n",
-    "- Choropleth Map: A map that will show where the most crimes are commited in Chicago. (https://altair-viz.github.io/gallery/choropleth.html)"
+    "- Choropleth Map: A map that will show where the most crimes are commited in Chicago. (https://altair-viz.github.io/gallery/choropleth.html)\n",
+    "- Bar Chart with rounded edges: A bar charts that will sum up the different types of crime and violence in every district. (https://altair-viz.github.io/gallery/bar_rounded.html)"
    ]
   },
   {
