--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -163,6 +163,8 @@
     "\n",
     "*Data:*\n",
     "\n",
+    "\n",
+    "\n",
     "*Visualization types:*\n",
     "- Choropleth Map: A map that will show where the most crimes are commited in Chicago. (https://altair-viz.github.io/gallery/choropleth.html)\n",
     "- Bar Chart with rounded edges: A bar charts that will sum up the different types of crime and violence in every district. (https://altair-viz.github.io/gallery/bar_rounded.html)"
@@ -213,18 +215,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('dst')",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
+    "hash": "89af4c0cc9f003a3c4b9635d367a6b2135c8262004deb93ca830213c60fa3d52"
    }
   }
  },
